test/bad/odd-table.fnl
(local f {:a 1 :b 2 :c})
